<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_bg"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/urbanist"
        android:text="@string/last_name"
        android:textColor="@color/gray_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextLastName"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/urbanist"
        android:text="@string/name"
        android:textColor="@color/gray_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAccount"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextEmail"
        android:layout_width="305dp"
        android:layout_height="53dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/gray_2"
        android:fontFamily="@font/urbanist"
        android:hint="Ingresa tu email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextUserName"
        android:layout_width="305dp"
        android:layout_height="53dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/gray_2"
        android:fontFamily="@font/urbanist"
        android:hint="Ingresa tu nombre de usuario"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLastName"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextPassword"
        android:layout_width="305dp"
        android:layout_height="53dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/gray_2"
        android:fontFamily="@font/urbanist"
        android:hint="Ingresa tu contraseña"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageVisorRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="18dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/visor"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextPassword"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/viewRegister"
        android:layout_width="5dp"
        android:layout_height="53dp"
        android:layout_marginStart="230dp"
        android:background="@color/black_bg"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextPassword"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextName"
        android:layout_width="305dp"
        android:layout_height="53dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/gray_2"
        android:fontFamily="@font/urbanist"
        android:hint="Ingresa tu nombre"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textName"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/urbanist"
        android:text="@string/my_account"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextLastName"
        android:layout_width="305dp"
        android:layout_height="53dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/gray_2"
        android:fontFamily="@font/urbanist"
        android:hint="Ingresa tu apellido"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/urbanist"
        android:text="@string/username"
        android:textColor="@color/gray_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextUserName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textEmailRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/urbanist"
        android:text="@string/Email"
        android:textColor="@color/gray_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textPasswordRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/urbanist"
        android:text="@string/Password"
        android:textColor="@color/gray_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewGoogleRegister"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/google"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintEnd_toStartOf="@+id/imageViewFacebookRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageViewFacebookRegister"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/facebook"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintEnd_toStartOf="@+id/imageViewInstagramRegister"
        app:layout_constraintStart_toEndOf="@+id/imageViewGoogleRegister"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageViewInstagramRegister"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/instagram"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintEnd_toStartOf="@+id/imageViewLinkedinRegister"
        app:layout_constraintStart_toEndOf="@+id/imageViewFacebookRegister"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageViewLinkedinRegister"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/linkedin"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewInstagramRegister"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rectangle"
        android:fontFamily="@font/urbanist"
        android:text="@string/next_btn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewFacebookRegister"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>