<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_bg"
    android:backgroundTint="@color/black_bg"
    android:theme="@style/Theme.GrooveHubApp.NoActionBar"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageGoogle"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="80dp"
        android:src="@drawable/google"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
        app:layout_constraintEnd_toStartOf="@+id/imageFacebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="275dp"
        android:fontFamily="@font/urbanist"
        android:text="@string/Email"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/urbanist"
        android:text="@string/Password"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/inputPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageFacebook"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="80dp"
        android:src="@drawable/facebook"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
        app:layout_constraintEnd_toStartOf="@+id/imageIg"
        app:layout_constraintStart_toEndOf="@+id/imageGoogle"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageIg"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="80dp"
        android:src="@drawable/instagram"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogIn"
        app:layout_constraintEnd_toStartOf="@+id/imageLinkedin"
        app:layout_constraintStart_toEndOf="@+id/imageFacebook"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageLinkedin"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="80dp"
        android:src="@drawable/linkedin"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageIg"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputEmail"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/gray_2"
        android:fontFamily="@font/urbanist"
        android:hint="Ingresa tu Email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmail"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputPassword"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/gray_2"
        android:fontFamily="@font/urbanist"
        android:hint="Contraseña"
        android:inputType="textPassword"
        android:password="false"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPassword"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageVisorLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/visor"
        app:layout_constraintEnd_toEndOf="@+id/inputPassword"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/inputPassword"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view"
        android:layout_width="5dp"
        android:layout_height="48dp"
        android:layout_marginEnd="-260dp"
        android:background="@color/black_bg"
        app:layout_constraintEnd_toStartOf="@+id/inputPassword"
        app:layout_constraintTop_toTopOf="@+id/inputPassword" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/urbanist"
        android:text="@string/SignUp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonLogIn"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/purple_50"
        android:fontFamily="@font/urbanist"
        android:text="@string/LogIn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSignUp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/forgotPassLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/urbanist"
        android:text="@string/ForgotPass"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>